--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,11 @@
 name: Release
 on:
   push:
-    tags: ['*']
+    tags: ['v*']
 permissions:
   contents: write
+  # https://docs.npmjs.com/trusted-publishers
+  id-token: write
 jobs:
   release:
     name: Release
@@ -11,6 +13,16 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v5
+      - name: Setup Node.js
+        uses: actions/setup-node@v6
+        with:
+          node-version: lts/*
+      - name: Install
+        run: npm install --ignore-scripts
+      - name: Test
+        run: npm test
+      - name: Publish
+        run: npm publish
       - name: Create GitHub release
         uses: docker://antonyurchenko/git-release:v4
         env:
